jboot v2.0:
新增：Metrics 的 InfluxdbReporter 支持，方便把信息通过 influx 输入到 grafana
优化：修改 RequestUtil 工具类的拼写错误问题，isMoblieBrowser 修改为 isMobileBrowser
优化：修改 StrUtil.isMobileNumber() 新增 166 开头号码的支持
优化：大幅度优化 StrUtil.escapeHtml() 的性能
优化：升级 JFinal 到 3.7 最新版本和 JFinal-undertow 到 1.6 最新版本


jboot v2.0-rc.13:
新增：新增 UrlParaValidate 注解，方便对 URl 参数进行验证
新增：新增 jboot.cache.aopCacheLiveSeconds 配置，方便给 service 的 注解添加下默认的缓存时间
新增：Columns 新增 in 和 between 的支持
新增：jboot.model.scanPackage 和 unscanPackage 的支持，方便自定义扫描的 Model
新增：新增 dubbo 的 zookeeper 注册中心的测试用例代码
新增：新增 Metrics 测试用例代码
修复：swaggerui中index.html中css，js，json资源路径错误的bug，感谢 @ninemm
修复：修复 Columns 查询时，有 or 是可能造成 sql 逻辑错误的问题
优化：优化 ClassScanner 配置逻辑，防止热加载时可能意外出错的情况
优化：优化 JbootScheduleManager 代码逻辑，方便自由添加任何和删除任务
优化：优化 JbootPaginateDirective 指令代码


jboot v2.0-rc.12:
新增：JbootAopFactory 新增自定义 Service 拦截器，方便 Service 拦截和切面编程。
修复：当通过环境变量去配置数据源的时候，DataSourceConfigManager无法获取多数据源的问题。
修复：用户自定义 JbootActionHandler 时的逻辑判断。
优化：优化 JbootConfigManager 读取 value 值的逻辑优化。
优化：修改 JbootAopFactory 里 Jboot 默认的 AOP 拦截器为 protected。
优化：优化 JbootExceptionHolder 逻辑，方便错误时的页面错误输出，同时提高性能。


jboot v2.0-rc.11:
新增：Docker 下配置的环境变量 XXX_XXX_XXX 自动转换为 xxx.xx.xx，用于属性读取。
优化：JbootResourceLoader 输出文字信息


jboot v2.0-rc.10:
修复：方法名错误的问题 JbootDirectiveBase.getParaToLang 修改为 getParaToLong
修复：JbootResourceLoader 可能出现空指针异常的问题
修复：JbootAopFactory 当客户端传入 null 会出现空指针异常的问题
优化：当 undertow 为对 host 配置的时候，默认host为 0.0.0.0


jboot v2.0-rc.9:
新增：JbootServiceBase 新增 shouldUpdateCache() 方法，用于给子类复写进行刷新缓存
修复：通过配置文件设置 DbProFactory 无效的问题
修复：第一次启动的时候，Jwt动态配置的Token可能为空的问题
修复：在父类使用 @Inject 后无法进行正确注入的问题
修复：非单例模式的AOP循环注入会出席死循环的问题
修复：用户添加的 Service 层 Interceptor 无法正确注入的问题


jboot v2.0-rc.8:
新增：Limit模块，可以用于没有运维的时候进行代码配置限流和降级
新增：WebSocketEndpoint 的配置支持 jboot.web.webSocketEndpoint
新增：undertow.unHotSwapClassPrefix 配置的支持，用于排除某些类在RPC下热加载的问题
优化：统一 JbootAppListener 的方法名，详情：https://gitee.com/fuhai/jboot/blob/v2.0/doc/docs/upgrade.md#%E4%BF%AE%E6%94%B9-jbootapplistener-%E7%9A%84%E6%96%B9%E6%B3%95%E5%90%8D